[package]
name = "synch"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A basic asynchronous timer implementation that uses the cortex-m SysTick peripheral"
homepage = "https://github.com/NZRosto/synch"
repository = "https://github.com/NZRosto/synch"
readme = "README.md"
keywords = ["systick", "time", "cortex-m", "async", "no-std"]
categories = ["asynchronous", "date-and-time", "no-std", "no-std::no-alloc"]


[lints]
clippy.pedantic = "warn"
rust.missing-docs = "warn"


[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = { version = "0.3", optional = true }
embedded-hal-async = "1"
fugit = "0.3"
woven = "0.1"


[features]
defmt = ["dep:defmt", "fugit/defmt"]
